# home_temp_reader

./: .gitignore  Cargo.toml  config.json  config.json.sample  database.sh  temp_reader.service
src/: main.rs
