[package]
name = "home_temp_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1

[dependencies]
bluer = { version = "0.16.1",  features = ["bluetoothd"]}
futures = "0.3"
tokio = { version = "1", features = ["net", "io-util"] }
tokio-stream = { version = "0.1", optional = true }
env_logger = "0.10"
phf = { version = "^0.11.1", features = ["macros", "unicase"] } #, default-features = false }
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
log = "0.4"
humantime = "2.1.0"
